--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org951e01a">Introduction</a></li>
-<li><a href="#org49f63bb">Understanding Stable Diffusion</a></li>
-<li><a href="#orgad89022">How Stable Diffusion Works</a></li>
-<li><a href="#orgc6ed463">Applications of Stable Diffusion</a></li>
-<li><a href="#org28e9810">Conclusion</a></li>
-<li><a href="#org123e56c">Code</a></li>
+<li><a href="#org0a625b6">Introduction</a></li>
+<li><a href="#orgab4bd6e">Understanding Stable Diffusion</a></li>
+<li><a href="#orgfa2389c">How Stable Diffusion Works</a></li>
+<li><a href="#org3228b60">Applications of Stable Diffusion</a></li>
+<li><a href="#org3c5fbcc">Conclusion</a></li>
+<li><a href="#org32e1655">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org951e01a" class="outline-2">
-<h2 id="org951e01a">Introduction</h2>
-<div class="outline-text-2" id="text-org951e01a">
+<section id="outline-container-org0a625b6" class="outline-2">
+<h2 id="org0a625b6">Introduction</h2>
+<div class="outline-text-2" id="text-org0a625b6">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org49f63bb" class="outline-2">
-<h2 id="org49f63bb">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org49f63bb">
+<section id="outline-container-orgab4bd6e" class="outline-2">
+<h2 id="orgab4bd6e">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgab4bd6e">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgad89022" class="outline-2">
-<h2 id="orgad89022">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgad89022">
+<section id="outline-container-orgfa2389c" class="outline-2">
+<h2 id="orgfa2389c">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-orgfa2389c">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgc6ed463" class="outline-2">
-<h2 id="orgc6ed463">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgc6ed463">
+<section id="outline-container-org3228b60" class="outline-2">
+<h2 id="org3228b60">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org3228b60">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org28e9810" class="outline-2">
-<h2 id="org28e9810">Conclusion</h2>
-<div class="outline-text-2" id="text-org28e9810">
+<section id="outline-container-org3c5fbcc" class="outline-2">
+<h2 id="org3c5fbcc">Conclusion</h2>
+<div class="outline-text-2" id="text-org3c5fbcc">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org123e56c" class="outline-2">
-<h2 id="org123e56c">Code</h2>
-<div class="outline-text-2" id="text-org123e56c">
+<section id="outline-container-org32e1655" class="outline-2">
+<h2 id="org32e1655">Code</h2>
+<div class="outline-text-2" id="text-org32e1655">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
