deploy: 733718bb9879631604550e2cc32d54257b0048a8

--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -44,7 +44,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org0179c6d">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#orgd3b8815">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +65,9 @@
 </script>
 
 
-<section id="outline-container-org0179c6d" class="outline-2">
-<h2 id="org0179c6d">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-org0179c6d">
+<section id="outline-container-orgd3b8815" class="outline-2">
+<h2 id="orgd3b8815">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-orgd3b8815">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
