--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -44,19 +44,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org0a625b6">Introduction</a></li>
-<li><a href="#orgab4bd6e">Understanding Stable Diffusion</a></li>
-<li><a href="#orgfa2389c">How Stable Diffusion Works</a></li>
-<li><a href="#org3228b60">Applications of Stable Diffusion</a></li>
-<li><a href="#org3c5fbcc">Conclusion</a></li>
-<li><a href="#org32e1655">Code</a></li>
+<li><a href="#org203fd42">Introduction</a></li>
+<li><a href="#org565402d">Understanding Stable Diffusion</a></li>
+<li><a href="#org0f8627f">How Stable Diffusion Works</a></li>
+<li><a href="#orgb5531d6">Applications of Stable Diffusion</a></li>
+<li><a href="#org214121c">Conclusion</a></li>
+<li><a href="#orgff5abb4">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org0a625b6" class="outline-2">
-<h2 id="org0a625b6">Introduction</h2>
-<div class="outline-text-2" id="text-org0a625b6">
+<section id="outline-container-org203fd42" class="outline-2">
+<h2 id="org203fd42">Introduction</h2>
+<div class="outline-text-2" id="text-org203fd42">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +67,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orgab4bd6e" class="outline-2">
-<h2 id="orgab4bd6e">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgab4bd6e">
+<section id="outline-container-org565402d" class="outline-2">
+<h2 id="org565402d">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org565402d">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +87,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgfa2389c" class="outline-2">
-<h2 id="orgfa2389c">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgfa2389c">
+<section id="outline-container-org0f8627f" class="outline-2">
+<h2 id="org0f8627f">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org0f8627f">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +118,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org3228b60" class="outline-2">
-<h2 id="org3228b60">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org3228b60">
+<section id="outline-container-orgb5531d6" class="outline-2">
+<h2 id="orgb5531d6">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgb5531d6">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +140,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org3c5fbcc" class="outline-2">
-<h2 id="org3c5fbcc">Conclusion</h2>
-<div class="outline-text-2" id="text-org3c5fbcc">
+<section id="outline-container-org214121c" class="outline-2">
+<h2 id="org214121c">Conclusion</h2>
+<div class="outline-text-2" id="text-org214121c">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +165,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org32e1655" class="outline-2">
-<h2 id="org32e1655">Code</h2>
-<div class="outline-text-2" id="text-org32e1655">
+<section id="outline-container-orgff5abb4" class="outline-2">
+<h2 id="orgff5abb4">Code</h2>
+<div class="outline-text-2" id="text-orgff5abb4">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
