--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org10c7962" class="outline-2 latest-section">
-<h2 id="org10c7962"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org10c7962">
+<section id="outline-container-orgc06f649" class="outline-2 latest-section">
+<h2 id="orgc06f649"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-orgc06f649">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">12 Jun 2024</span></span>  <a href="posts/philosophy/consious_realism/index.html">Modern Idealists</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">15 Apr 2024</span></span>  <a href="posts/physics/qft/index.html">QFT</a><br></li>
