deploy: e3427178785ecfa409a3a589ca6d39e4db34aa03

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 12 Jun. 2024 -->
+<!-- 04 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org0c6ff61" class="outline-2">
-<h2 id="org0c6ff61">Introduction</h2>
-<div class="outline-text-2" id="text-org0c6ff61">
+<section id="outline-container-orgfab28f3" class="outline-2">
+<h2 id="orgfab28f3">Introduction</h2>
+<div class="outline-text-2" id="text-orgfab28f3">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
@@ -92,7 +92,7 @@ This setup based on <a href="https://orgmode.org">org-mode</a>.
 </section>
 </main>
 <footer id="postamble" class="status">
-<p>Last updated 12 Jun. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 04 Dec. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
