--- a/tutorials/BareBonesML/index.html
+++ b/tutorials/BareBonesML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 12 Jun. 2024 -->
+<!-- 04 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>BareBonesML: Inner workings of ML algorithms</title>
@@ -9,9 +9,11 @@
 <meta name="author" content="Shrisha Rao">
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/htmlize.css"/>
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/readtheorg.css"/>
+<link rel="stylesheet" type="text/css" href="src/readtheorg_theme/css/search.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/search.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
 <script type="text/javascript">
 // @license magnet:?xt=urn:btih:e95b018ef3580986a04669f1b5879592219e2a7a&dn=public-domain.txt Public Domain
@@ -66,43 +68,43 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgde8af7f">Supervised Algorithms</a>
+<li><a href="#org8eef221">Supervised Algorithms</a>
 <ul>
-<li><a href="#org0cd999a">Support Vector Machine (SVM)</a>
+<li><a href="#org57351cb">Support Vector Machine (SVM)</a>
 <ul>
-<li><a href="#orgfbf3eb5">Dealing with outliers: The Slack term</a></li>
-<li><a href="#orgf886cd8">Dealing with non-linear speration boundires: Kernel Trick</a></li>
+<li><a href="#org1b85127">Dealing with outliers: The Slack term</a></li>
+<li><a href="#org2ba806a">Dealing with non-linear speration boundires: Kernel Trick</a></li>
 </ul>
 </li>
-<li><a href="#org22f356a">Naive Bayes</a>
+<li><a href="#org8a93e00">Naive Bayes</a>
 <ul>
-<li><a href="#org67e410a">Limitations</a></li>
+<li><a href="#orgd0e5ae4">Limitations</a></li>
 </ul>
 </li>
-<li><a href="#org3591f1a">Ensemble Learning</a>
+<li><a href="#orgeaa5514">Ensemble Learning</a>
 <ul>
-<li><a href="#orgf74e725">Random Forest (Bagging)</a></li>
-<li><a href="#orgb29c082">Gradient Boosting Machine</a></li>
+<li><a href="#orgaa07657">Random Forest (Bagging)</a></li>
+<li><a href="#orgf5eace4">Gradient Boosting Machine</a></li>
 </ul>
 </li>
-<li><a href="#org108ec30">Gaussian Discriminant Analysis</a></li>
-<li><a href="#orgc3c2c32">K-Nearest Neighbours</a></li>
+<li><a href="#org8240779">Gaussian Discriminant Analysis</a></li>
+<li><a href="#org2c432b1">K-Nearest Neighbours</a></li>
 </ul>
 </li>
-<li><a href="#orga28b841">Unsupervised Algorithms</a>
+<li><a href="#org4d4ad20">Unsupervised Algorithms</a>
 <ul>
-<li><a href="#org863fb29">K-Means Clustering</a></li>
-<li><a href="#org79bbca4">PCA</a></li>
+<li><a href="#org4014d92">K-Means Clustering</a></li>
+<li><a href="#org356718f">PCA</a></li>
 </ul>
 </li>
-<li><a href="#org9de456d">Sequential Data</a>
+<li><a href="#orgc42e4b7">Sequential Data</a>
 <ul>
-<li><a href="#org9dc26ff">Hidden Markov Model</a></li>
+<li><a href="#org8f008c8">Hidden Markov Model</a></li>
 </ul>
 </li>
-<li><a href="#org8272b4e">Optimization techniques</a>
+<li><a href="#org0bb1873">Optimization techniques</a>
 <ul>
-<li><a href="#orgfb79eeb">Simulated annealing</a></li>
+<li><a href="#org300e9ff">Simulated annealing</a></li>
 </ul>
 </li>
 </ul>
@@ -133,13 +135,13 @@ not intended to replace standard machine learning libraries for use in<br>
 production.<br>
 </p>
 
-<section id="outline-container-orgde8af7f" class="outline-2">
-<h2 id="orgde8af7f">Supervised Algorithms</h2>
-<div class="outline-text-2" id="text-orgde8af7f">
+<section id="outline-container-org8eef221" class="outline-2">
+<h2 id="org8eef221">Supervised Algorithms</h2>
+<div class="outline-text-2" id="text-org8eef221">
 </div>
-<div id="outline-container-org0cd999a" class="outline-3">
-<h3 id="org0cd999a">Support Vector Machine (SVM)</h3>
-<div class="outline-text-3" id="text-org0cd999a">
+<div id="outline-container-org57351cb" class="outline-3">
+<h3 id="org57351cb">Support Vector Machine (SVM)</h3>
+<div class="outline-text-3" id="text-org57351cb">
 <p>
 Central to the SVM is the concept of maximizing the margin between classes,<br>
 achieved by finding the hyperplane that separates the data points of different<br>
@@ -203,9 +205,9 @@ as follows:<br>
 </p>
 </div>
 
-<div id="outline-container-orgfbf3eb5" class="outline-4">
-<h4 id="orgfbf3eb5">Dealing with outliers: The Slack term</h4>
-<div class="outline-text-4" id="text-orgfbf3eb5">
+<div id="outline-container-org1b85127" class="outline-4">
+<h4 id="org1b85127">Dealing with outliers: The Slack term</h4>
+<div class="outline-text-4" id="text-org1b85127">
 <p>
 Slack refers to the allowance of misclassification or errors in the SVM<br>
 optimization process. Introducing slack enables SVM to handle linearly/non-linearly<br>
@@ -216,9 +218,9 @@ better to complex datasets, although too much slack can lead to overfitting.<br>
 </div>
 </div>
 
-<div id="outline-container-orgf886cd8" class="outline-4">
-<h4 id="orgf886cd8">Dealing with non-linear speration boundires: Kernel Trick</h4>
-<div class="outline-text-4" id="text-orgf886cd8">
+<div id="outline-container-org2ba806a" class="outline-4">
+<h4 id="org2ba806a">Dealing with non-linear speration boundires: Kernel Trick</h4>
+<div class="outline-text-4" id="text-org2ba806a">
 <p>
 Thee kernel trick is a method used to extend SVMs for non-linear decision<br>
 boundaries without explicitly mapping the input data into a higher-dimensional<br>
@@ -238,9 +240,9 @@ applications.<br>
 </div>
 </div>
 
-<div id="outline-container-org22f356a" class="outline-3">
-<h3 id="org22f356a">Naive Bayes</h3>
-<div class="outline-text-3" id="text-org22f356a">
+<div id="outline-container-org8a93e00" class="outline-3">
+<h3 id="org8a93e00">Naive Bayes</h3>
+<div class="outline-text-3" id="text-org8a93e00">
 <p>
 Naive Bayes is a probabilistic algorithm commonly used for classification<br>
 tasks. Its simplicity, speed, and effectiveness make it a popular choice for<br>
@@ -306,9 +308,9 @@ Output: Predicted class labels for the test set.
 </pre>
 </div>
 
-<div id="outline-container-org67e410a" class="outline-4">
-<h4 id="org67e410a">Limitations</h4>
-<div class="outline-text-4" id="text-org67e410a">
+<div id="outline-container-orgd0e5ae4" class="outline-4">
+<h4 id="orgd0e5ae4">Limitations</h4>
+<div class="outline-text-4" id="text-orgd0e5ae4">
 <ul class="org-ul">
 <li><b>Assumption of Feature Independence</b><br></li>
 <li><b>Handling of Continuous Features</b><br>
@@ -332,9 +334,9 @@ sparse feature spaces.<br>
 </div>
 </div>
 
-<div id="outline-container-org3591f1a" class="outline-3">
-<h3 id="org3591f1a">Ensemble Learning</h3>
-<div class="outline-text-3" id="text-org3591f1a">
+<div id="outline-container-orgeaa5514" class="outline-3">
+<h3 id="orgeaa5514">Ensemble Learning</h3>
+<div class="outline-text-3" id="text-orgeaa5514">
 <p>
 Ensemble learning is a ML technique that combines the predictions of multiple<br>
 individual models to produce a stronger overall prediction. The idea behind<br>
@@ -372,9 +374,9 @@ error in the previous step.<br></li>
 </div>
 
 
-<div id="outline-container-orgf74e725" class="outline-4">
-<h4 id="orgf74e725">Random Forest (Bagging)</h4>
-<div class="outline-text-4" id="text-orgf74e725">
+<div id="outline-container-orgaa07657" class="outline-4">
+<h4 id="orgaa07657">Random Forest (Bagging)</h4>
+<div class="outline-text-4" id="text-orgaa07657">
 <p>
 Random Forest is popular ensemble learning algorithm based on <b><i>Bagging</i></b>.<br>
 During the training phase, multiple decision trees are trained.  Each decision<br>
@@ -445,9 +447,9 @@ predict(forest, X_test):
 </div>
 
 
-<div id="outline-container-orgb29c082" class="outline-4">
-<h4 id="orgb29c082">Gradient Boosting Machine</h4>
-<div class="outline-text-4" id="text-orgb29c082">
+<div id="outline-container-orgf5eace4" class="outline-4">
+<h4 id="orgf5eace4">Gradient Boosting Machine</h4>
+<div class="outline-text-4" id="text-orgf5eace4">
 <p>
 It works by combining multiple weak learners, typically decision trees, to<br>
 create a strong learner that can make accurate predictions. Unlike traditional<br>
@@ -468,9 +470,9 @@ LightGBM have made it a cornerstone of modern machine learning workflows.<br>
 </div>
 </div>
 
-<div id="outline-container-org108ec30" class="outline-3">
-<h3 id="org108ec30">Gaussian Discriminant Analysis</h3>
-<div class="outline-text-3" id="text-org108ec30">
+<div id="outline-container-org8240779" class="outline-3">
+<h3 id="org8240779">Gaussian Discriminant Analysis</h3>
+<div class="outline-text-3" id="text-org8240779">
 <p>
 Gaussian Discriminant Analysis (GDA) is a probabilistic generative model used<br>
 for classification tasks. In GDA, it is assumed that the features of each class<br>
@@ -493,9 +495,9 @@ spaces or with highly skewed or multimodal data.<br>
 </div>
 </div>
 
-<div id="outline-container-orgc3c2c32" class="outline-3">
-<h3 id="orgc3c2c32">K-Nearest Neighbours</h3>
-<div class="outline-text-3" id="text-orgc3c2c32">
+<div id="outline-container-org2c432b1" class="outline-3">
+<h3 id="org2c432b1">K-Nearest Neighbours</h3>
+<div class="outline-text-3" id="text-org2c432b1">
 <p>
 K-Nearest Neighbors (KNN) is a simple yet powerful supervised machine learning<br>
 algorithm used for both classification and regression tasks. In KNN, the<br>
@@ -520,13 +522,13 @@ between bias and variance.<br>
 </section>
 
 
-<section id="outline-container-orga28b841" class="outline-2">
-<h2 id="orga28b841">Unsupervised Algorithms</h2>
-<div class="outline-text-2" id="text-orga28b841">
+<section id="outline-container-org4d4ad20" class="outline-2">
+<h2 id="org4d4ad20">Unsupervised Algorithms</h2>
+<div class="outline-text-2" id="text-org4d4ad20">
 </div>
-<div id="outline-container-org863fb29" class="outline-3">
-<h3 id="org863fb29">K-Means Clustering</h3>
-<div class="outline-text-3" id="text-org863fb29">
+<div id="outline-container-org4014d92" class="outline-3">
+<h3 id="org4014d92">K-Means Clustering</h3>
+<div class="outline-text-3" id="text-org4014d92">
 <p>
 K-Means is an algorithm used for partitioning a dataset into K distinct,<br>
 non-overlapping clusters. The algorithm works by iteratively assigning data<br>
@@ -559,9 +561,9 @@ Here is the logic:<br>
 </div>
 </div>
 
-<div id="outline-container-org79bbca4" class="outline-3">
-<h3 id="org79bbca4">PCA</h3>
-<div class="outline-text-3" id="text-org79bbca4">
+<div id="outline-container-org356718f" class="outline-3">
+<h3 id="org356718f">PCA</h3>
+<div class="outline-text-3" id="text-org356718f">
 <p>
 Principal Component Analysis (PCA) is a dimensionality reduction technique<br>
 commonly used in data analysis and machine learning. Its primary goal is to<br>
@@ -606,13 +608,13 @@ the transformed data.<br></li>
 </section>
 
 
-<section id="outline-container-org9de456d" class="outline-2">
-<h2 id="org9de456d">Sequential Data</h2>
-<div class="outline-text-2" id="text-org9de456d">
+<section id="outline-container-orgc42e4b7" class="outline-2">
+<h2 id="orgc42e4b7">Sequential Data</h2>
+<div class="outline-text-2" id="text-orgc42e4b7">
 </div>
-<div id="outline-container-org9dc26ff" class="outline-3">
-<h3 id="org9dc26ff">Hidden Markov Model</h3>
-<div class="outline-text-3" id="text-org9dc26ff">
+<div id="outline-container-org8f008c8" class="outline-3">
+<h3 id="org8f008c8">Hidden Markov Model</h3>
+<div class="outline-text-3" id="text-org8f008c8">
 <p>
 Hidden Markov Models (HMMs) have been succfully used in various fields from<br>
 speech recognition to bioinformatics, for modeling sequential data. At its core,<br>
@@ -678,13 +680,13 @@ decision-making.<br>
 
 
 
-<section id="outline-container-org8272b4e" class="outline-2">
-<h2 id="org8272b4e">Optimization techniques</h2>
-<div class="outline-text-2" id="text-org8272b4e">
+<section id="outline-container-org0bb1873" class="outline-2">
+<h2 id="org0bb1873">Optimization techniques</h2>
+<div class="outline-text-2" id="text-org0bb1873">
 </div>
-<div id="outline-container-orgfb79eeb" class="outline-3">
-<h3 id="orgfb79eeb">Simulated annealing</h3>
-<div class="outline-text-3" id="text-orgfb79eeb">
+<div id="outline-container-org300e9ff" class="outline-3">
+<h3 id="org300e9ff">Simulated annealing</h3>
+<div class="outline-text-3" id="text-org300e9ff">
 <p>
 <b>A technique to find approximate global optimum in hightly rugged energy<br>
 landscapes</b><br>
@@ -720,7 +722,7 @@ travelling salesman problem:<br>
 <footer id="postamble" class="status">
 <p class="date">Date: 21 Mar. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 12 Jun. 2024</p>
+<p class="date">Created: 04 Dec. 2024</p>
 </footer>
 </body>
 </html>
