--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 12 Jun. 2024 -->
+<!-- 04 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Polyglot</title>
@@ -9,9 +9,11 @@
 <meta name="author" content="Shrisha Rao">
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/htmlize.css"/>
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/readtheorg.css"/>
+<link rel="stylesheet" type="text/css" href="src/readtheorg_theme/css/search.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/search.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
 <script type="text/javascript">
 // @license magnet:?xt=urn:btih:e95b018ef3580986a04669f1b5879592219e2a7a&dn=public-domain.txt Public Domain
@@ -44,7 +46,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd3b8815">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org0ca8bdd">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -65,9 +67,9 @@
 </script>
 
 
-<section id="outline-container-orgd3b8815" class="outline-2">
-<h2 id="orgd3b8815">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-orgd3b8815">
+<section id="outline-container-org0ca8bdd" class="outline-2">
+<h2 id="org0ca8bdd">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org0ca8bdd">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
@@ -77,7 +79,7 @@
 <footer id="postamble" class="status">
 <p class="date">Date: 21 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 12 Jun. 2024</p>
+<p class="date">Created: 04 Dec. 2024</p>
 </footer>
 </body>
 </html>
