--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 12 Jun. 2024 -->
+<!-- 04 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Playing with StableDiffusion: A Fascinating Algorithm for Image Generation</title>
@@ -9,9 +9,11 @@
 <meta name="author" content="Shrisha Rao">
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/htmlize.css"/>
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/readtheorg.css"/>
+<link rel="stylesheet" type="text/css" href="src/readtheorg_theme/css/search.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/search.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
 <script type="text/javascript">
 // @license magnet:?xt=urn:btih:e95b018ef3580986a04669f1b5879592219e2a7a&dn=public-domain.txt Public Domain
@@ -44,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org203fd42">Introduction</a></li>
-<li><a href="#org565402d">Understanding Stable Diffusion</a></li>
-<li><a href="#org0f8627f">How Stable Diffusion Works</a></li>
-<li><a href="#orgb5531d6">Applications of Stable Diffusion</a></li>
-<li><a href="#org214121c">Conclusion</a></li>
-<li><a href="#orgff5abb4">Code</a></li>
+<li><a href="#orgf9eb883">Introduction</a></li>
+<li><a href="#org8073fc5">Understanding Stable Diffusion</a></li>
+<li><a href="#org9d9aa23">How Stable Diffusion Works</a></li>
+<li><a href="#org8b7a091">Applications of Stable Diffusion</a></li>
+<li><a href="#orge2b1823">Conclusion</a></li>
+<li><a href="#orge7c9919">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org203fd42" class="outline-2">
-<h2 id="org203fd42">Introduction</h2>
-<div class="outline-text-2" id="text-org203fd42">
+<section id="outline-container-orgf9eb883" class="outline-2">
+<h2 id="orgf9eb883">Introduction</h2>
+<div class="outline-text-2" id="text-orgf9eb883">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -67,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org565402d" class="outline-2">
-<h2 id="org565402d">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org565402d">
+<section id="outline-container-org8073fc5" class="outline-2">
+<h2 id="org8073fc5">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org8073fc5">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -87,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org0f8627f" class="outline-2">
-<h2 id="org0f8627f">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org0f8627f">
+<section id="outline-container-org9d9aa23" class="outline-2">
+<h2 id="org9d9aa23">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org9d9aa23">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -118,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgb5531d6" class="outline-2">
-<h2 id="orgb5531d6">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgb5531d6">
+<section id="outline-container-org8b7a091" class="outline-2">
+<h2 id="org8b7a091">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org8b7a091">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -140,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org214121c" class="outline-2">
-<h2 id="org214121c">Conclusion</h2>
-<div class="outline-text-2" id="text-org214121c">
+<section id="outline-container-orge2b1823" class="outline-2">
+<h2 id="orge2b1823">Conclusion</h2>
+<div class="outline-text-2" id="text-orge2b1823">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -165,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orgff5abb4" class="outline-2">
-<h2 id="orgff5abb4">Code</h2>
-<div class="outline-text-2" id="text-orgff5abb4">
+<section id="outline-container-orge7c9919" class="outline-2">
+<h2 id="orge7c9919">Code</h2>
+<div class="outline-text-2" id="text-orge7c9919">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
@@ -233,7 +235,7 @@ plt.show()
 <footer id="postamble" class="status">
 <p class="date">Date: 22 Feb. 2024</p>
 <p class="author">Author: Shrisha Rao</p>
-<p class="date">Created: 12 Jun. 2024</p>
+<p class="date">Created: 04 Dec. 2024</p>
 </footer>
 </body>
 </html>
