--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf9eb883">Introduction</a></li>
-<li><a href="#org8073fc5">Understanding Stable Diffusion</a></li>
-<li><a href="#org9d9aa23">How Stable Diffusion Works</a></li>
-<li><a href="#org8b7a091">Applications of Stable Diffusion</a></li>
-<li><a href="#orge2b1823">Conclusion</a></li>
-<li><a href="#orge7c9919">Code</a></li>
+<li><a href="#org9f616c9">Introduction</a></li>
+<li><a href="#org169a742">Understanding Stable Diffusion</a></li>
+<li><a href="#org9156159">How Stable Diffusion Works</a></li>
+<li><a href="#org477cf00">Applications of Stable Diffusion</a></li>
+<li><a href="#orgeaf0e4d">Conclusion</a></li>
+<li><a href="#orgc3fff2a">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orgf9eb883" class="outline-2">
-<h2 id="orgf9eb883">Introduction</h2>
-<div class="outline-text-2" id="text-orgf9eb883">
+<section id="outline-container-org9f616c9" class="outline-2">
+<h2 id="org9f616c9">Introduction</h2>
+<div class="outline-text-2" id="text-org9f616c9">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org8073fc5" class="outline-2">
-<h2 id="org8073fc5">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org8073fc5">
+<section id="outline-container-org169a742" class="outline-2">
+<h2 id="org169a742">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org169a742">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org9d9aa23" class="outline-2">
-<h2 id="org9d9aa23">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org9d9aa23">
+<section id="outline-container-org9156159" class="outline-2">
+<h2 id="org9156159">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org9156159">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org8b7a091" class="outline-2">
-<h2 id="org8b7a091">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org8b7a091">
+<section id="outline-container-org477cf00" class="outline-2">
+<h2 id="org477cf00">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org477cf00">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-orge2b1823" class="outline-2">
-<h2 id="orge2b1823">Conclusion</h2>
-<div class="outline-text-2" id="text-orge2b1823">
+<section id="outline-container-orgeaf0e4d" class="outline-2">
+<h2 id="orgeaf0e4d">Conclusion</h2>
+<div class="outline-text-2" id="text-orgeaf0e4d">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orge7c9919" class="outline-2">
-<h2 id="orge7c9919">Code</h2>
-<div class="outline-text-2" id="text-orge7c9919">
+<section id="outline-container-orgc3fff2a" class="outline-2">
+<h2 id="orgc3fff2a">Code</h2>
+<div class="outline-text-2" id="text-orgc3fff2a">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
